# toy_amm

./: .gitignore  README.md
amm/: Cargo.toml  build.sh
amm/release/: toy_amm.wasm
amm/src/: constants.rs  ft_core.rs  internal.rs  lib.rs  utils.rs
integration-tests/rs/: Cargo.toml
integration-tests/rs/src/: tests.rs
integration-tests/ts/: ava.config.js  package.json
integration-tests/ts/src/: main.ava.ts
