[package]
name = "toy_amm"
version = "0.1.0"
author = "sudolewis@gmail.com"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type=["cdylib", "rlib"]

[dependencies]
near-sdk = "4.0.0"
near-contract-standards = "4.0.0"
uint = { version = "0.9.5", default-features = false }

[profile.release]